# clashtui

./: .gitignore  Cargo.toml  README.en.md  README.md  README.zh-CN.md  ctx_tui_redesign.md  issue_macos_tun_service.md  issue_mihomo_single_runtime.md  issue_port_management.md  issue_runtime_isolation.md  issue_taobao_dns.md  issue_tui_design.md  issue_tun_helper.md  issue_tun_macos_helper.md  issue_ucd_redesign.md
doc/: architecture.md  config-spec.md  dns-design.md  llm-providers.yaml  system-proxy-tun-dns-modes.md
doc/agent/: config-semantics.md  dns.md  llm-providers-cn.md  mihomo-config-spec.md  overview.md  patch-rules.md  port-proxy.md  runtime-generation.md  subscriptions.md  system-proxy.md  troubleshooting.md  tun.md
examples/: settings_menu.rs
scripts/: tun_guarded_test.sh
src/: autostart.rs  config.rs  config_menu.rs  core.rs  daemon.rs  dns.rs  i18n.rs  llm.rs  llm_providers.rs  main.rs  mihomo.rs  pac.rs  port_allocator.rs  privilege.rs  runtime_profile.rs  service.rs  subscription.rs  system_proxy.rs  tun.rs
src/agent/: knowledge.rs  mod.rs  patch.rs
src/platform/: tun.rs
src/privilege/: linux.rs  macos.rs  mod.rs  unsupported.rs
