[package]
name = "clashtui"
version = "0.1.0"
edition = "2024"
description = "A small TUI and background controller for mihomo / Clash.Meta"
readme = "README.md"

[workspace]
resolver = "2"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.53", features = ["derive", "env"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "=0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
sysproxy = { git = "https://github.com/clash-verge-rev/sysproxy-rs", branch = "0.5.4" }
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = "thin"
opt-level = 3
debug = 1
strip = "none"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
unimplemented = "deny"
todo = "warn"
dbg_macro = "warn"
needless_raw_string_hashes = "deny"
useless_let_if_seq = "deny"
unnecessary_wraps = "deny"
